# SOLASolvers

./: BackSubstitution.h  CMakeLists.txt  DenseMatrix.h  GaussMethod.h  consts.h  main.cpp
Chebyshev/: Chebyshev.h
Dense/: BackSubstitution.h  DenseMatrix.h  GaussMethod.h  LU.h
Generators/: GenerateDenseMatrix.h  GenerateVector.h
Sparse/: CSR.h  GaussSeidel.h  Jacobi.h  SOR.h  SSOR.h  SimpleIteration.h
tests/: testGauss.h  testLU.h  testLUSolver.h
utils/: Triplet.h  consts.h  gnuplot-iostream.h  overloads.h
